--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -1,3 +1,8 @@
 
+generic-y += atomic.h
+generic-y += bitops.h
 generic-y += bug.h
+generic-y += cmpxchg.h
+generic-y += irqflags.h
+generic-y += linkage.h
 generic-y += string.h
