TCH-gcc: make GCC_1003_TARGET changeable
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/TCH-gcc/Makefile.gcc-1003
+++ b/TCH-gcc/Makefile.gcc-1003
@@ -4,7 +4,7 @@
 GCC_1003_ORIGIN		:= $(DIR_GIT_ORIGIN)/gcc.git
 GCC_1003_VERSION	:= releases/gcc-10.3.0
 GCC_1003_BRANCH		:= dadao-1003
-GCC_1003_TARGET		:= dadao-linux-gnu
+GCC_1003_TARGET		?= dadao-linux-gnu
 
 GCC_1003_NEWFILES	:= $(DIR_DADAO_TOP)/TCH-gcc/gcc-1003-newfiles
 GCC_1003_PATCHES	:= $(DIR_DADAO_TOP)/TCH-gcc/gcc-1003-patches
