ENV-linux: add current.h to arch/dadao/include/asm/Kbuild
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -3,6 +3,7 @@ generic-y += atomic.h
 generic-y += bitops.h
 generic-y += bug.h
 generic-y += cmpxchg.h
+generic-y += current.h
 generic-y += div64.h
 generic-y += irqflags.h
 generic-y += linkage.h
