ENV-linux: add several asm-generic headers
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -7,4 +7,11 @@ generic-y += current.h
 generic-y += div64.h
 generic-y += irqflags.h
 generic-y += linkage.h
+generic-y += mmiowb.h
+generic-y += mmu.h
+generic-y += percpu.h
+generic-y += preempt.h
+generic-y += shmparam.h
 generic-y += string.h
+generic-y += timex.h
+generic-y += topology.h
