--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -1,18 +1,27 @@
-
+#
+# Copyright (C) 2020-2033 Guan Xuetao (AT) Peking Univ.
+#
 generic-y += atomic.h
 generic-y += bitops.h
 generic-y += bug.h
 generic-y += cmpxchg.h
 generic-y += current.h
 generic-y += div64.h
+generic-y += dma.h
+generic-y += exec.h
+generic-y += extable.h
+generic-y += io.h
 generic-y += irqflags.h
 generic-y += linkage.h
 generic-y += mmiowb.h
 generic-y += mmu.h
+generic-y += module.h
 generic-y += percpu.h
 generic-y += preempt.h
+generic-y += sections.h
 generic-y += shmparam.h
 generic-y += string.h
 generic-y += timex.h
 generic-y += topology.h
 generic-y += trace_clock.h
+generic-y += uaccess.h
