ENV-linux: simple arch/dadao/Makefile
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Makefile
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Makefile
@@ -1,3 +1,39 @@
 #
 # arch/dadao/Makefile
 #
+# Copyright (C) 2020-2033 Guan Xuetao (AT) Peking Univ.
+#
+ifneq ($(SUBARCH),$(ARCH))
+	ifeq ($(CROSS_COMPILE),)
+		CROSS_COMPILE := $(call cc-cross-prefix, dadao-linux-gnu)
+	endif
+endif
+
+# Never generate .eh_frame
+KBUILD_CFLAGS		+= $(call cc-option,-fno-dwarf2-cfi-asm)
+
+CHECKFLAGS		+= -D__dadao__
+
+head-y			:= arch/dadao/kernel/head.o
+
+core-y			+= arch/dadao/kernel/
+
+libs-y			+= arch/dadao/lib/
+
+boot			:= arch/dadao/boot/
+
+# Default target when executing plain make
+KBUILD_IMAGE		:= $(boot)/zImage
+
+all:	zImage
+
+zImage Image: vmlinux
+	$(Q)$(MAKE) $(build)=$(boot) $(boot)/$@
+
+archclean:
+	$(Q)$(MAKE) $(clean)=$(boot)
+
+define archhelp
+  echo  '* zImage        - Compressed kernel image (arch/$(ARCH)/boot/zImage)'
+  echo  '  Image         - Uncompressed kernel image (arch/$(ARCH)/boot/Image)'
+endef
