--- a/DADAO-bench/Makefile.bench
+++ b/DADAO-bench/Makefile.bench
@@ -17,6 +17,7 @@ DDB_QEMU_USER		:= $(DIR_DADAO_INSTALL)/bin/qemu-dadao
 DDB_QEMU_SYS		:= $(DIR_DADAO_INSTALL)/bin/qemu-system-dadao
 
 include DADAO-bench/Makefile.bench-simple
+include DADAO-bench/Makefile.bench-multi-arch
 
 bench-clean:
 	@rm -fr $(DDB_DST_DIR)
