--- a/DADAO-bench/Makefile.bench
+++ b/DADAO-bench/Makefile.bench
@@ -19,6 +19,7 @@ DDB_QEMU_SYS		:= $(DIR_DADAO_INSTALL)/bin/qemu-system-dadao
 include DADAO-bench/Makefile.bench-simple
 include DADAO-bench/Makefile.bench-dhrystone
 include DADAO-bench/Makefile.bench-multi-arch
+include DADAO-bench/Makefile.bench-gcc-testsuite-dejagnu-init
 
 bench-clean:
 	@rm -fr $(DDB_DST_DIR)
