TCH-gcc: gcc-1003-dhryrun-testsuite-check
Signed-off-by: Zhu Guangtao <zhuguangtao@pkunity.com>

--- a/TCH-gcc/Makefile.gcc-1003
+++ b/TCH-gcc/Makefile.gcc-1003
@@ -119,6 +119,14 @@ gcc-1003-check:
 	@make -C $(GCC_1003_BUILD) check-gcc-c		1>> $(GCC_1003_LOG_STDOUT) 2>> $(GCC_1003_LOG_STDERR)
 	@ln --symbolic -t $(GCC_1003_BUILD) $(GCC_1003_BUILD)/gcc/testsuite/gcc/gcc.sum
 
+gcc-1003-dhryrun-testsuite-check:
+	@echo "DHRYRUN GCC-TESTSUITE FOR SELF-CHECKING WITH QEMU-SIMULATOR"
+	@PATH=$(DEJAGNU_ENVIRNOMENT)				\
+		make -C $(GCC_1003_BUILD) check-gcc-c		\
+		RUNTESTFLAGS="--target_board=qemu-dadao"	\
+		1>> $(GCC_1003_LOG_STDOUT) 2>> $(GCC_1003_LOG_STDERR)
+	@ln --symbolic -t $(GCC_1003_BUILD) $(GCC_1003_BUILD)/gcc/testsuite/gcc/gcc.sum
+
 gcc-1003-tags:
 	@cd $(GCC_1003_SOURCE) &&							\
 		ctags --recurse --exclude=testsuite --languages=C,C++			\
