--- a/DADAO-bench/Makefile.bench
+++ b/DADAO-bench/Makefile.bench
@@ -21,6 +21,7 @@ include DADAO-bench/Makefile.bench-dhrystone
 include DADAO-bench/Makefile.bench-multi-arch
 include DADAO-bench/Makefile.bench-gcc-testsuite-dejagnu-init
 include DADAO-bench/Makefile.bench-coremark
+include DADAO-bench/Makefile.bench-embench
 
 bench-clean:
 	@rm -fr $(DDB_DST_DIR)
