--- a/DADAO-bench/Makefile.bench
+++ b/DADAO-bench/Makefile.bench
@@ -22,6 +22,7 @@ include DADAO-bench/Makefile.bench-multi-arch
 include DADAO-bench/Makefile.bench-gcc-testsuite-dejagnu-init
 include DADAO-bench/Makefile.bench-coremark
 include DADAO-bench/Makefile.bench-embench
+include DADAO-bench/Makefile.bench-mibench
 
 bench-clean:
 	@rm -fr $(DDB_DST_DIR)
