--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -14,7 +14,10 @@ CHIPYARD_0107_CONFIG		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-config
 CHIPYARD_0107_PATCHES		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-patches
 
 CHIPYARD_0107_DADAO_WUMING	:= $(DIR_DADAO_TOP)/SOC-chipyard/dadao-wuming
-CHIPYARD_0107_DADAO_CONFIG	:= Wuming1StageConfig
+CHIPYARD_0107_DADAO_CONFIG	?= Wuming1StageConfig
+CHIPYARD_0107_DADAO_BINARY	?= $(DIR_DADAO_RISCV)/riscv-bmarks/dhrystone.riscv
+
+CHIPYARD_0107_DADAO_PATH	:= $(DIR_DADAO_RISCV)/bin:/bin:/usr/bin
 
 include SOC-chipyard/Makefile.riscv-isa-sim
 
@@ -61,6 +64,12 @@ chipyard-0107-build:
 	@mkdir -p $(CHIPYARD_0107_BUILD)
 	@cd $(CHIPYARD_0107_SOURCE)/sims/verilator;						\
 		RISCV=$(DIR_DADAO_TOP)/__riscv make CONFIG=$(CHIPYARD_0107_DADAO_CONFIG) sim_dir=$(CHIPYARD_0107_BUILD)
+
+chipyard-0107-run-binary:
+	@cd $(CHIPYARD_0107_SOURCE)/sims/verilator;						\
+		RISCV=$(DIR_DADAO_TOP)/__riscv							\
+		PATH=$(CHIPYARD_0107_DADAO_PATH)						\
+		make CONFIG=$(CHIPYARD_0107_DADAO_CONFIG) BINARY=$(CHIPYARD_0107_DADAO_CONFIG) run-binary
 
 chipyard-0107-highfive:
 	@echo "--- BUILD chipyard-0107 BEGIN ---"
