--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -59,9 +59,11 @@ chipyard-0107-source-add-wuming:
 		git commit -asm"DADAO: add chipyard-config";					\
 		git am $(CHIPYARD_0107_PATCHES)/*
 
-chipyard-0107-build:
+chipyard-0107-build-new:
 	@rm -fr $(CHIPYARD_0107_BUILD)
 	@mkdir -p $(CHIPYARD_0107_BUILD)
+
+chipyard-0107-build:
 	@cd $(CHIPYARD_0107_SOURCE)/sims/verilator;						\
 		RISCV=$(DIR_DADAO_TOP)/__riscv make CONFIG=$(CHIPYARD_0107_DADAO_CONFIG) sim_dir=$(CHIPYARD_0107_BUILD)
 
@@ -84,7 +86,9 @@ chipyard-0107-highfive:
 	@make -s chipyard-0107-source-local		1>> $(CHIPYARD_0107_LOG_STDOUT) 2>> $(CHIPYARD_0107_LOG_STDERR)
 	# 4. Add dadao-wuming into chipyard ...
 	@make -s chipyard-0107-source-add-wuming	1>> $(CHIPYARD_0107_LOG_STDOUT) 2>> $(CHIPYARD_0107_LOG_STDERR)
-	# 5. Build chipyard ...
+	# 5. Clean chipyard build dir ...
+	@make -s chipyard-0107-build-new		1>> $(CHIPYARD_0107_LOG_STDOUT) 2>> $(CHIPYARD_0107_LOG_STDERR)
+	# 6. Build chipyard ...
 	@make -s chipyard-0107-build			1>> $(CHIPYARD_0107_LOG_STDOUT) 2>> $(CHIPYARD_0107_LOG_STDERR)
 	@echo "--- BUILD chipyard-0107 DONE! ---"
 
