--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -75,6 +75,11 @@ chipyard-0107-run-binary:
 		make CONFIG=$(CHIPYARD_0107_DADAO_CONFIG) sim_dir=$(CHIPYARD_0107_BUILD)	\
 			 run-binary BINARY=$(CHIPYARD_0107_DADAO_BINARY)
 
+chipyard-0107-tracer:
+	# analyzes the contents of the omitted trace file and generates basic statistics
+	@$(CHIPYARD_0107_SOURCE)/generators/riscv-sodor/scripts/tracer.py			\
+		$(CHIPYARD_0107_BUILD)/output/chipyard.TestHarness.$(CHIPYARD_0107_DADAO_CONFIG)/dhrystone.out
+
 chipyard-0107-highfive:
 	@echo "--- BUILD chipyard-0107 BEGIN ---"
 	# 0. Remove old chipyard logfiles
