--- a/TCH-binutils-gdb/Makefile.binutils-gdb-0235
+++ b/TCH-binutils-gdb/Makefile.binutils-gdb-0235
@@ -1,7 +1,7 @@
 #
 # Makefile for binutils-gdb in toolchain
 #
-BINUTILS_GDB_0235_ORIGIN		:= $(DIR_GIT_ORIGIN)/binutils-gdb.git
+BINUTILS_GDB_0235_ORIGIN		:= https://github.com/bminor/binutils-gdb.git
 BINUTILS_GDB_0235_VERSION		:= binutils-2_35_2
 BINUTILS_GDB_0235_BRANCH		:= dadao-0235
 BINUTILS_GDB_0235_TARGET		?= dadao-linux-gnu
